# colmsg

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  Cross.toml  LICENSE.txt  Makefile  README.md  docker-compose.yml
.github/workflows/: aur-update.yml  homebrew-update.yml  release.yml
api/: api-kh-glastonr-net.yaml  api-n46-glastonr-net.yaml
api/components/schemas/: PastMessages.yaml  RequestHeaderAccept-Encoding.yaml  RequestHeaderAccept-Language.yaml  RequestHeaderAccept.yaml  RequestHeaderAuthorization.yaml  RequestHeaderConnection.yaml  RequestHeaderContent-Length.yaml  RequestHeaderContent-type.yaml  RequestHeaderHost.yaml  RequestHeaderTE.yaml  RequestHeaderUser-Agent.yaml  RequestHeaderX-Talk-App-ID.yaml  ResponseHeaderCache-Control.yaml  ResponseHeaderConnection.yaml  ResponseHeaderContent-Length.yaml  ResponseHeaderContent-Type.yaml  ResponseHeaderDate.yaml  ResponseHeaderPragma.yaml  ResponseHeaderVary.yaml  ResponseHeaderX-Request-Id.yaml  Timeline.yaml  TimelineCanceledObject.yaml  TimelineLetter.yaml  TimelinePicture.yaml  TimelinePictureObject.yaml  TimelineText.yaml  TimelineTextObject.yaml  TimelineVideo.yaml  TimelineVideoObject.yaml  TimelineVoice.yaml  TimelineVoiceObject.yaml
doc/: changes_about_sakurazaka_and_hinatazaka_app.md  how_to_get_refresh_token.md
src/: controller.rs  dirs.rs  lib.rs
src/http/: article.rs  article_allhistory.rs  client.rs  groups.rs  mod.rs  past_messages.rs  subscribe_list.rs  tags.rs  timeline.rs  update_token.rs
src/message/: file.rs  mod.rs  saver.rs
