[package]
name = "colmsg"
version = "1.0.0"
authors = ["proshunsuke <shunsuke0901@gmail.com>"]
categories = ["command-line-utilities"]
description="'欅坂46/日向坂46 メッセージ'アプリのメッセージをPCに保存します."
homepage = "https://github.com/proshunsuke/colmsg"
license = "MIT"
readme = "README.md"
repository = "https://github.com/proshunsuke/colmsg"
edition = "2018"

[dependencies]
console = "^0.9.2"
ansi_term = "^0.12.1"
ansi_colours = "^1.0"
dirs = "^2.0.2"
lazy_static = "^1.4.0"
wild = "^2.0.0"
shell-words = "^0.1.0"
chrono = "^0.4.10"
serde_json = "^1.0.0"
walkdir = "^2.3.1"
regex = "^1.3.5"
url = "^2.1.1"

[dependencies.serde]
version = "^1.0.104"
default-features = false
features = ["derive"]

[dependencies.clap]
version = "^2.33.0"
default-features = false
features = ["suggestions", "color", "wrap_help"]

[dependencies.reqwest]
version = "^0.10.0"
default-features = false
features = ["blocking", "json", "default-tls"]

[dependencies.tokio]
version = "^0.2.0"
default-features = false
features = ["full"]

[dependencies.error-chain]
version = "^0.12.2"
default-features = false
features = []

[dev-dependencies]
tempdir = "^0.3.7"
assert_cmd = "^0.12.0"
escargot = "^0.5.0"

[build-dependencies]
clap = "^2.33.0"
liquid = "^0.19.0"
lazy_static = "^1.4.0"

[profile.release]
lto = true
